Estabelecendo coneão com o banco de dados

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionStrings": {
+    "BaseExemplo": "Data Source=localhost;Database=BaseExemplo;User ID=SA;Password=DockerSql2017!;"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
