Gravando no banco local

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "BaseExemplo": "Data Source=localhost;Database=BaseExemplo;User ID=SA;Password=DockerSql2017!;"
+    "BaseExemplo": "Data Source=localhost,11433;Initial Catalog=BaseExemplo;User ID=SA;Password=DockerSql2017!;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
