--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "BaseExemplo": "Data Source=localhost,11433;Initial Catalog=BaseExemplo;User ID=SA;Password=DockerSql2017!;"
   },
+  "TokenConfigurations": {
+    "Audience": "ExemploAudience",
+    "Issuer": "ExemploIssuer",
+    "Seconds": 120
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
